# blockchains-query-api

./: .gitignore  LICENSE  README.md  blockchains-query-api.cabal  stack.yaml
.circleci/: config.yml  lint.sh  setupenv.sh
app/: Main.hs
src/: BlockchainsQueryApi.hs
src/BlockchainsQueryApi/: Api.hs  AppM.hs  Client.hs  Domain.hs  Handlers.hs  Haskoin.hs  Parity.hs  Prelude.hs  Ripple.hs
test/: BTCApiSpec.hs  ETHApiSpec.hs  Main.hs  ParitySpec.hs  RippleSpec.hs  XRPApiSpec.hs  rippled.conf  start-rippled.sh
